tests/snapshots/transformer@binary_bitwise_simple_into_complex.nolana.snap
---
source: tests/integration.rs
input_file: tests/transformer/binary_bitwise_simple_into_complex.nolana
---
variable.__0 = 0;
variable.__1 = 0;
loop(24, {
    variable.__2 = math.mod(math.floor(variable.x / math.pow(2, variable.__1)), 2);
    variable.__3 = math.mod(math.floor(variable.y / math.pow(2, variable.__1)), 2);
    variable.__4 = math.min(1, variable.__2 + variable.__3);
    variable.__0 = variable.__0 + variable.__4 * math.pow(2, variable.__1);
    variable.__1 = variable.__1 + 1;
});
return variable.__0;
