tests/snapshots/transformer@unary.nolana.snap
---
source: tests/integration.rs
input_file: tests/transformer/unary.nolana
---
variable.__0 = 0;
variable.__1 = 0;
loop(24, {
    variable.__2 = math.mod(math.floor(1 / math.pow(2, variable.__1)), 2);
    variable.__3 = 1 - variable.__2;
    variable.__0 = variable.__0 + variable.__3 * math.pow(2, variable.__1);
    variable.__1 = variable.__1 + 1;
});
variable.a = variable.__0;
