tests/snapshots/transformer@update.nolana.snap
---
source: tests/integration.rs
input_file: tests/transformer/update.nolana
---
{
    variable.a = variable.a + 1;
};
{
    variable.other = math.random();
    {
        variable.b = variable.b - 1;
    };
    variable.do ? {
        variable.other = math.random();
        {
            variable.c = variable.c + 1;
        };
        variable.other = math.random();
    };
};
