tests/snapshots/transformer@update_simple_into_complex.nolana.snap
---
source: tests/integration.rs
input_file: tests/transformer/update_simple_into_complex.nolana
---
{
    variable.x = variable.x + 1;
};
